# spot_futures_crewai

./: .gitignore  README.md  api地址l.md  debug_tool_binding.py  main.py  pyproject.toml  requirements.txt  run_analysis.py  test_crew.py  test_data_logging.py  test_ifind_EDB.py  test_ifind_connection.py  test_ifind_direct.py  test_ifind_params.py  test_ifind_setup.py  test_ifind_workflow.py  test_intent_final.py  test_system.py  关于mac版本说明.md  数据名
agents/: apparent_demand_analyst.py  basis_agent.py  chief_strategy_agent.py  demand_forecasting_analyst.py  ifind_agent.py  intent_agent.py  inventory_agent.py  macro_economic_agent.py  price_technical_agent.py  quant_strategy_agent.py  supply_demand_agent.py  trading_agent.py
broker/: broker_request_example.py  broker_subscriber_example.py  run_broker_example.py  run_broker_with_rpc_pubsub_example.py
config/: check_setup.py  edb_asphalt_indicators.py  ifind_config.py  ifind_edb_mapping.py  logging_config.py  settings.py  trading_config.py  trading_config.toml  trading_config_bk.py
data_providers/: __init__.py  aitrados_data.py  base.py  factory.py  ifind_http_client.py  ifind_http_data.py  mock_data.py  wind_data.py
data_service/: main.py
llm_config/: base_llm.py  deepseek_llm.py  factory.py  llms.toml  qwen_llm.py  zhipuai_llm.py
main/: analysis_workflow.py
nlp/: intent_parser.py
schemas/: models.py
tasks/: apparent_demand_analysis_task.py  basis_analysis_task.py  demand_forecasting_task.py  dynamic_task_factory.py  enhanced_intent_planning_task.py  final_strategy_task.py  intent_planning_task.py  (+7 more)
(+44 files in other folders)
