[project]
name = "spot-futures-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aitrados-broker>=0.0.19",
    "crewai>=1.7.0",
    "crewai-tools>=1.7.0",
    "dashscope>=1.25.2",
    "deepseek>=1.0.0",
    "fastapi>=0.124.0",
    "langchain>=1.1.3",
    "toml>=0.10.2",
    "zhipuai>=1.0.7",
]
